@@ -1,3 +1,7 @@
+Fri Sep 01 19:13:15 2000  George Lebl <jirka@5z.com>
+
+	* gnome-url.[ch]: Use GError instead of homebrewed error return
+
 2000-08-31  Martin Baulig  <baulig@suse.de>
 
 	* gnome-i18n.c (gnome_i18n_get_language_list): Mark this as
